1. Fixed ShulkerGem right click method, to properly shoot bullets. 2. Fixed AmethystGem right click to propery apply damage to amethyst shards. 3. Fixed BrezzeGem shift-click, The breezes now don't immediatly despawn. 4. Fixed MagicGem shift-click. The vexes now don't despawn immediatly. 5.Fix MechGem, you can't just walk through the walls now. Refactors, maybe a little preformance optimization and not so apparent bugs fixed. Improved stability.
NOTE: THE MAGMA BOX DOES NOT PROTECT YOU YET AND NOW THE PLUGIN IS ONLY 1.21.11+.