@@ -21,7 +21,7 @@ public class AmethystThrowListener implements Listener {
 
     @EventHandler
     public void onProjectileHit(ProjectileHitEvent e) {
-        if (!(e.getEntity() instanceof Snowball s) || isAmethystProjectile(s)) return;
+        if (!(e.getEntity() instanceof Snowball s) || !isAmethystProjectile(s)) return;
 
         if (e.getHitEntity() != null) {
             s.getWorld().spawnParticle(Particle.CRIT, s.getLocation(), 10, 0.1, 0.1, 0.1, 0.02);
@@ -39,14 +39,17 @@ public class AmethystThrowListener implements Listener {
 
     @EventHandler
     public void onProjectileDamage(EntityDamageByEntityEvent e) {
-        if (!(e.getDamager() instanceof Snowball s) || isAmethystProjectile(s)) return;
+        if (!(e.getDamager() instanceof Snowball s) || !isAmethystProjectile(s)) return;
         Integer stored = s.getPersistentDataContainer().get(Keys.AMETHYST_LEVEL, PersistentDataType.INTEGER);
         int lvl = stored != null ? stored : 1;
-        int clamped = Math.max(1, Math.min(3, lvl));
+        int clamped = Math.clamp(lvl, 1, 5);
         double damage = switch (clamped) { // 1->3, 2->4, 3+->5 hearts (3-5 damage points)
             case 1 -> 3.0;
             case 2 -> 4.0;
-            default -> 5.0;
+            case 3 -> 5.0;
+            case 4 -> 6.0;
+            case 5 -> 7.0;
+            default -> 2.0;
         };
         e.setDamage(damage);
     }
